--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -3,7 +3,15 @@
     padding: 10px;
     box-sizing: border-box;
 }
-
+input{
+    background: #dfe2e2;
+    border: 2px solid #738598;
+    border-radius :5px;
+    text-align: center;
+    padding: 5px;
+    height: 50px;
+    width: 300px;
+}
 .Label {
     font-weight: bold;
     display: block;
