--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -8,6 +8,7 @@ input{
     border: 2px solid #738598;
     border-radius :5px;
     text-align: center;
+    margin: 10px;
     padding: 5px;
     height: 50px;
     width: 300px;
