--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -3,6 +3,14 @@
     padding: 10px;
     box-sizing: border-box;
 }
+form{
+    height: 35vh;
+    align-items: center;
+    justify-content: center;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
+}
 input{
     background: #dfe2e2;
     border: 2px solid #738598;
