--- a/src/components/categories/aicte/scholarship/eligibility_criteria/eligibility.css
+++ b/src/components/categories/aicte/scholarship/eligibility_criteria/eligibility.css
@@ -7,6 +7,9 @@
     padding: 10px;
     box-sizing: border-box;
 }
+form{
+    background: green;
+}
 @media (min-width: 600px) {
     .ContactData {
         width: 500px;
