--- a/src/components/front/front.css
+++ b/src/components/front/front.css
@@ -11,11 +11,11 @@
     border-radius: 5px;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
-form{
+/* form{
     height: 35vh;
     align-items: center;
     justify-content: center;
     display: flex;
     flex-direction: column;
     justify-content: space-evenly;
-}
+} */
