--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -4,7 +4,7 @@
     box-sizing: border-box;
 }
 form{
-    height: 35vh;
+    height: 100%;
     align-items: center;
     justify-content: center;
     display: flex;
@@ -13,10 +13,10 @@ form{
 }
 input{
     background: #dfe2e2;
+    margin: 15px;
     border: 2px solid #738598;
     border-radius :5px;
     text-align: center;
-    margin: 10px;
     padding: 5px;
     height: 50px;
     width: 300px;
