--- a/src/components/UI/Input/Input.css
+++ b/src/components/UI/Input/Input.css
@@ -3,20 +3,37 @@
     padding: 10px;
     box-sizing: border-box;
 }
+
 form{
     height: 100%;
     align-items: center;
     justify-content: center;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
 }
+form div{
+    height: 100%;
+    align-items: center;
+    justify-content: center;
+    margin: 7px;
+    /* display: flex;
+    flex-direction: column; 
+    justify-content: space-evenly; */
+}
+form div select{
+    width: 100%;
+    text-align: center;
+    align-content: center;
+    border: 2px solid grey;
+    border-radius: 5px;
+    height:50px;
+    padding: 5px;
+    background: #dfe2e2;
+}    
 input{
     background: #dfe2e2;
     margin: 15px;
     border: 2px solid #738598;
     border-radius :5px;
-    text-align: center;
+    /* text-align: center; */
     padding: 5px;
     height: 50px;
     width: 300px;
