--- a/src/components/front/front.css
+++ b/src/components/front/front.css
@@ -12,6 +12,19 @@
     border-radius: 5px;
     box-shadow: 0 4px 18px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.innerBox form{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+}
+.innerBox form button{
+    display: inline-block;
+    color:white;
+    background: green;
+    height: 90px;
+    border-radius:5px;
+    border: 2px solid grey;
+}
 /* form{
     height: 35vh;
     align-items: center;
