--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -13,6 +13,7 @@
 }
 .mainWindow .ContactData{
     background : #e7dada;
+    text-align: center;
     display: flex;
     flex-direction: column;
     padding:20px;
