--- a/src/components/front/front.css
+++ b/src/components/front/front.css
@@ -3,7 +3,10 @@
     align-items: center;
     justify-content: center;
     height:100vh;
-    background: #f5f5f5;
+    background-image: url("../../assets/images/C1.jpg");
+    background-attachment: fixed;
+    background-position: center; 
+    
 }
 .innerBox{
     height: 35vh;
@@ -25,6 +28,17 @@
     border-radius:5px;
     border: 2px solid grey;
 }
+.navabar{
+    background: #2b2c40;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    /* justify-content: space-between; */
+    color: cyan;
+    font-weight: 500;
+    font-size: 20px;
+    height:50px;
+  }
 /* form{
     height: 35vh;
     align-items: center;
