--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
   align-items: center;
   justify-content: center;
   justify-content: space-between;
-  color: cyan;
+  color: #e7dada;
   font-weight: 500;
   font-size: 20px;
   height:64px;
