--- a/src/container/grievences/post/postopen.css
+++ b/src/container/grievences/post/postopen.css
@@ -10,6 +10,10 @@
 .oneClass{
     display: flex;
     justify-content: space-between;
+    vertical-align: centre;
+}
+.oneClass button{
+    margin: 10px 0px 10px 10px;
 }
 .twoClass{
     display: flex;
