--- a/src/components/front/front.css
+++ b/src/components/front/front.css
@@ -34,7 +34,7 @@
     align-items: center;
     justify-content: center;
     /* justify-content: space-between; */
-    color: cyan;
+    color: #e7dada;
     font-weight: 500;
     font-size: 20px;
     height:50px;
