--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -32,6 +32,9 @@
     z-index: 2;
     position: fixed;
 }
+.projectName{
+    margin-left: 7px; 
+}
 @media (max-width: 650px) {
     .projectName{
         display: none;
