--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -32,6 +32,13 @@
     z-index: 2;
     position: fixed;
 }
+.brandA{
+    color: white;
+}
+.brandA:hover{
+    text-decoration: none;
+    color:lightslategray;
+}
 .projectName{
     margin-left: 7px; 
 }
